mdapi/objects/Guide__c.object
<CustomObject>
    <description>Product Documentation - User Guide container for indexing order of articles</description>
    <fields>
        <fullName>Community_URL__c</fullName>
        <description>Formula for link to the Guide in the Community</description>
        <formula>&quot;/support/s/guide/&quot;&amp;Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula for link to the Guide in the Community</inlineHelpText>
        <label>Community URL src=</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Data_Category__c</fullName>
        <inlineHelpText>Optional - Enter the Product Data Category API name to be used as a default for new articles in this guide.  Examples:  ShadowControl, Cloud_Services</inlineHelpText>
        <label>Default Data Category</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guide_Id__c</fullName>
        <description>Field to display the Id on the page, for import purposes.</description>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Guide Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Needs Review</fullName>
                </value>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Guide</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Default_Data_Category__c</columns>
        <columns>Status__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CurrentGuides</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Draft,Archived</value>
        </filters>
        <label>Current</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guides</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>